--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,8 @@
 name: pulseTrain
 channels:
+  - pytorch
   - conda-forge
+  - nvidia
   - defaults
 dependencies:
   - appdirs=1.4.4=pyhd3eb1b0_0
@@ -19,7 +21,40 @@ dependencies:
   - colorama=0.4.6=py311haa95532_0
   - contourpy=1.0.5=py311h59b6b97_0
   - cryptography=39.0.1=py311h21b164f_0
+  - cuda=11.3.0=hd997d6f_0
+  - cuda-cccl=12.2.53=0
+  - cuda-command-line-tools=11.8.0=0
+  - cuda-compiler=12.2.0=0
+  - cuda-cudart=11.8.89=0
+  - cuda-cudart-dev=11.8.89=0
+  - cuda-cuobjdump=12.2.53=0
+  - cuda-cupti=11.8.87=0
+  - cuda-cuxxfilt=12.2.53=0
+  - cuda-demo-suite=12.2.53=0
+  - cuda-documentation=12.2.53=0
+  - cuda-libraries=11.8.0=0
+  - cuda-libraries-dev=11.8.0=0
+  - cuda-memcheck=11.8.86=0
+  - cuda-nsight-compute=12.2.0=0
+  - cuda-nvcc=12.2.91=0
+  - cuda-nvdisasm=12.2.53=0
+  - cuda-nvml-dev=12.2.81=0
+  - cuda-nvprof=12.2.60=0
+  - cuda-nvprune=12.2.53=0
+  - cuda-nvrtc=11.8.89=0
+  - cuda-nvrtc-dev=11.8.89=0
+  - cuda-nvtx=11.8.86=0
+  - cuda-nvvp=12.2.60=0
+  - cuda-opencl=12.2.53=0
+  - cuda-opencl-dev=12.2.53=0
+  - cuda-profiler-api=12.2.53=0
+  - cuda-runtime=11.8.0=0
+  - cuda-samples=11.5.56=h3d39d80_0
+  - cuda-sanitizer-api=12.2.53=0
+  - cuda-toolkit=11.3.0=hd997d6f_0
+  - cuda-tools=11.3.0=hd997d6f_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - filelock=3.9.0=py311haa95532_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.12.1=ha860e81_0
   - giflib=5.2.1=h8cc25b3_3
@@ -30,6 +65,7 @@ dependencies:
   - icu=58.2=ha925a31_3
   - idna=3.4=py311haa95532_0
   - intel-openmp=2023.1.0=h59b6b97_46319
+  - jinja2=3.1.2=py311haa95532_0
   - jpeg=9e=h2bbff1b_1
   - kiwisolver=1.4.4=py311hd77b12b_0
   - krb5=1.19.4=h5b6d351_0
@@ -39,26 +75,47 @@ dependencies:
   - libbrotlienc=1.0.9=h2bbff1b_7
   - libclang=14.0.6=default_hb5a9fac_1
   - libclang13=14.0.6=default_h8e68704_1
+  - libcublas=11.11.3.6=0
+  - libcublas-dev=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufft-dev=10.9.0.58=0
+  - libcurand=10.3.3.53=0
+  - libcurand-dev=10.3.3.53=0
+  - libcusolver=11.4.1.48=0
+  - libcusolver-dev=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
+  - libcusparse-dev=11.7.5.86=0
   - libdeflate=1.17=h2bbff1b_0
   - libffi=3.4.4=hd77b12b_0
   - libiconv=1.16=h2bbff1b_2
+  - libnpp=11.8.0.86=0
+  - libnpp-dev=11.8.0.86=0
+  - libnvjitlink=12.2.91=0
+  - libnvjitlink-dev=12.2.91=0
+  - libnvjpeg=11.9.0.86=0
+  - libnvjpeg-dev=11.9.0.86=0
   - libogg=1.3.5=h2bbff1b_1
   - libpng=1.6.39=h8cc25b3_0
   - libtiff=4.5.0=h6c2663c_2
+  - libuv=1.44.2=h2bbff1b_0
   - libvorbis=1.3.7=he774522_0
   - libwebp=1.2.4=hbc33d0d_1
   - libwebp-base=1.2.4=h2bbff1b_1
   - libxml2=2.10.3=h0ad7f3c_0
   - libxslt=1.1.37=h2bbff1b_0
   - lz4-c=1.9.4=h2bbff1b_0
+  - markupsafe=2.1.1=py311h2bbff1b_0
   - matplotlib=3.7.1=py311h1ea47a8_0
   - matplotlib-base=3.7.1=py311hf62ec03_1
   - mkl=2023.1.0=h8bd8f75_46356
   - mkl-service=2.4.0=py311h2bbff1b_1
   - mkl_fft=1.3.6=py311hf62ec03_1
   - mkl_random=1.2.2=py311hf62ec03_1
+  - mpmath=1.2.1=py311haa95532_0
   - munkres=1.1.4=py_0
   - mypy_extensions=0.4.3=py311haa95532_1
+  - networkx=2.8.4=py311haa95532_1
+  - nsight-compute=2023.2.0.16=0
   - numexpr=2.8.4=py311h1fcbade_1
   - numpy=1.25.0=py311hdab7c0b_0
   - numpy-base=1.25.0=py311hd01c5d8_0
@@ -81,6 +138,9 @@ dependencies:
   - python=3.11.4=h966fe2a_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.11=2_cp311
+  - pytorch=2.0.1=py3.11_cuda11.8_cudnn8_0
+  - pytorch-cuda=11.8=h24eeafa_5
+  - pytorch-mutex=1.0=cuda
   - pytz=2022.7=py311haa95532_0
   - qt-main=5.15.2=he8e5bd7_8
   - qt-webengine=5.15.9=hb9a9bb5_5
@@ -91,10 +151,12 @@ dependencies:
   - sip=6.6.2=py311hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.41.2=h2bbff1b_0
+  - sympy=1.11.1=py311haa95532_0
   - tbb=2021.8.0=h59b6b97_0
   - tk=8.6.12=h2bbff1b_0
   - toml=0.10.2=pyhd3eb1b0_0
   - tornado=6.2=py311h2bbff1b_0
+  - typing_extensions=4.6.3=py311haa95532_0
   - tzdata=2023c=h04d1e81_0
   - urllib3=1.26.16=py311haa95532_0
   - vc=14.2=h21ff451_1
@@ -105,4 +167,7 @@ dependencies:
   - zlib=1.2.13=h8cc25b3_0
   - zstandard=0.19.0=py311h2bbff1b_0
   - zstd=1.5.5=hd43e919_0
+  - pip:
+      - torchaudio==2.0.2
+      - torchvision==0.15.2
 prefix: C:\Users\dougl\anaconda3\envs\pulseTrain
