--- a/environment.yml
+++ b/environment.yml
@@ -25,8 +25,8 @@ dependencies:
   - brotli-bin=1.0.9=h2bbff1b_7
   - brotlipy=0.7.0=py311h2bbff1b_1002
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.5.7=h56e8100_0
-  - certifi=2023.5.7=pyhd8ed1ab_0
+  - ca-certificates=2023.7.22=h56e8100_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
   - cffi=1.15.1=py311h2bbff1b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py311haa95532_0
@@ -226,6 +226,7 @@ dependencies:
   - tk=8.6.12=h2bbff1b_0
   - toml=0.10.2=pyhd3eb1b0_0
   - tomli=2.0.1=pyhd8ed1ab_0
+  - torchinfo=1.8.0=pyhd8ed1ab_0
   - tornado=6.2=py311h2bbff1b_0
   - tqdm=4.65.0=pyhd8ed1ab_1
   - traitlets=5.9.0=pyhd8ed1ab_0
