--- a/environment.yml
+++ b/environment.yml
@@ -91,6 +91,7 @@ dependencies:
   - ipython=8.14.0=pyh08f2357_0
   - jedi=0.18.2=pyhd8ed1ab_0
   - jinja2=3.1.2=py311haa95532_0
+  - joblib=1.3.0=pyhd8ed1ab_1
   - jpeg=9e=h2bbff1b_1
   - json5=0.9.14=pyhd8ed1ab_0
   - jsonschema=4.17.3=pyhd8ed1ab_0
@@ -210,6 +211,7 @@ dependencies:
   - requests=2.29.0=py311haa95532_0
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
+  - scikit-learn=1.2.2=py311hd77b12b_1
   - scipy=1.10.1=py311hc1ccb85_1
   - send2trash=1.8.2=pyh08f2357_0
   - setuptools=67.8.0=py311haa95532_0
@@ -222,6 +224,7 @@ dependencies:
   - sympy=1.11.1=py311haa95532_0
   - tbb=2021.8.0=h59b6b97_0
   - terminado=0.17.1=py311haa95532_0
+  - threadpoolctl=3.2.0=pyha21a80b_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.12=h2bbff1b_0
   - toml=0.10.2=pyhd3eb1b0_0
