--- a/environment.yml
+++ b/environment.yml
@@ -25,8 +25,8 @@ dependencies:
   - brotli-bin=1.0.9=h2bbff1b_7
   - brotlipy=0.7.0=py311h2bbff1b_1002
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.7.22=h56e8100_0
-  - certifi=2023.7.22=pyhd8ed1ab_0
+  - ca-certificates=2023.08.22=haa95532_0
+  - certifi=2023.7.22=py311haa95532_0
   - cffi=1.15.1=py311h2bbff1b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py311haa95532_0
@@ -164,7 +164,7 @@ dependencies:
   - numexpr=2.8.4=py311h1fcbade_1
   - numpy=1.25.0=py311hdab7c0b_0
   - numpy-base=1.25.0=py311hd01c5d8_0
-  - openssl=1.1.1u=h2bbff1b_0
+  - openssl=1.1.1w=h2bbff1b_0
   - overrides=7.3.1=pyhd8ed1ab_0
   - packaging=23.0=py311haa95532_0
   - pandas=1.5.3=py311heda8569_0
@@ -213,6 +213,7 @@ dependencies:
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - scikit-learn=1.2.2=py311hd77b12b_1
   - scipy=1.10.1=py311hc1ccb85_1
+  - seaborn=0.12.2=py311haa95532_0
   - send2trash=1.8.2=pyh08f2357_0
   - setuptools=67.8.0=py311haa95532_0
   - sip=6.6.2=py311hd77b12b_0
